Ingress-networking.k8s.io_v1-guestbook.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    config.kubernetes.io/origin: |
      path: ../../base/guestbook-ing.yaml
    deployment-repo: kustomize-everything/guestbook-deploy
    deployment-repo-url: https://github.com/kustomize-everything/guestbook-deploy
    env-branch: env-stage
    env-branch-url: https://github.com/kustomize-everything/guestbook-deploy/tree/env-stage
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
  labels:
    app.kubernetes.io/managed-by: kustomize-v4.5.7
  name: guestbook
spec:
  ingressClassName: contour
  rules:
    - host: guestbook-stage.demo.kustomize-everything.io
      http:
        paths:
          - backend:
              service:
                name: guestbook
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - guestbook-stage.demo.kustomize-everything.io
      secretName: guestbook-tls
